add messages and liking ft
